--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ body {
 
 @media screen and (min-width: 992px) {
   .content {
+    max-width: 1200px;
     grid-template-areas:
       "one one two five"
       "three four four five";
